RESOLVED FIXED316015
XRProjectionLayer returns incorrect values for width, height, and layer count
https://bugs.webkit.org/show_bug.cgi?id=316015
Summary XRProjectionLayer returns incorrect values for width, height, and layer count
Mike Wyrzykowski
Reported 2026-06-01 10:52:36 PDT
XRProjectionLayer returns incorrect values for width, height, and layer count
Attachments
Radar WebKit Bug Importer
Comment 1 2026-06-01 10:52:42 PDT
Mike Wyrzykowski
Comment 2 2026-06-01 11:15:54 PDT
EWS
Comment 3 2026-06-05 13:32:49 PDT
Committed 314658@main (cab3d2d0f36f): <https://commits.webkit.org/314658@main> Reviewed commits have been landed. Closing PR #66187 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.