XRProjectionLayer returns incorrect values for width, height, and layer count https://bugs.webkit.org/show_bug.cgi?id=316015 rdar://178444052

Reviewed by Dan Glastonbury.

It's possible to determine the width and height from the XRGPUSubImage but the
spec requires us to implement the properties on the XRProjectionLayer too and
we had failed to do so.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUXRProjectionLayerImpl.cpp:
(WebCore::WebGPU::XRProjectionLayerImpl::colorTextureWidth const):
(WebCore::WebGPU::XRProjectionLayerImpl::colorTextureHeight const):
(WebCore::WebGPU::XRProjectionLayerImpl::colorTextureArrayLength const):
* Source/WebGPU/WebGPU/WebGPU.h:
* Source/WebGPU/WebGPU/XRProjectionLayer.h:
* Source/WebGPU/WebGPU/XRProjectionLayer.mm:
(WebGPU::XRProjectionLayer::colorTextureWidth const):
(WebGPU::XRProjectionLayer::colorTextureHeight const):
(WebGPU::XRProjectionLayer::colorTextureArrayLength const):
(wgpuXRProjectionLayerColorTextureWidth):
(wgpuXRProjectionLayerColorTextureHeight):
(wgpuXRProjectionLayerColorTextureArrayLength):
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteXRProjectionLayer.cpp:
(WebKit::RemoteXRProjectionLayer::colorTextureDimensions):
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteXRProjectionLayer.h:
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteXRProjectionLayer.messages.in:
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteXRProjectionLayerProxy.cpp:
(WebKit::WebGPU::RemoteXRProjectionLayerProxy::startFrame):
(WebKit::WebGPU::RemoteXRProjectionLayerProxy::cachedColorTextureDimensions const const):
(WebKit::WebGPU::RemoteXRProjectionLayerProxy::colorTextureWidth const):
(WebKit::WebGPU::RemoteXRProjectionLayerProxy::colorTextureHeight const):
(WebKit::WebGPU::RemoteXRProjectionLayerProxy::colorTextureArrayLength const):
(WebKit::WebGPU::RemoteXRProjectionLayerProxy::fixedFoveation const):
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteXRProjectionLayerProxy.h:

Canonical link: https://commits.webkit.org/314658@main